added images per group member

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <h1>RaiderSecurity</h1>
     <div>
         <h2>Group Members</h2>
-        <p>Gage Johnson - Group Leader</p>
-        <p>Reid Layne - Meeting Organizer </p>
-        <p>Tyler Bowen - Technical Lead</p>
-        <p>Nick Sanches - Testing & QA Lead</p>
+        <p><img src="Static/images/GageJohnson.png" style="width: 50px;height: 50px;">   Gage Johnson - Group Leader</p>
+        <p><img src="Static/images/ReidLayne.png" style="width: 60px;height: 60px;">    Reid Layne - Meeting Organizer </p>
+        <p><img src="Static/images/TylerBowen.png" style="width: 50px;height: 70px;">   Tyler Bowen - Technical Lead</p>
+        <p><img src="Static/images/NickSanches.png" style="width: 60px; height: 60;">       Nick Sanchez - Testing & QA Lead</p>
     </div>
 
     <div>
