--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AVSVA - Raider Security | Army Research Lab Partnership</title>
     <link rel="stylesheet" href="Static/css/style.css">
+     <link rel="icon" type="image/x-icon" href="Static/images/favicon.ico">
 </head>
 <body>
     <!-- Header -->
