--- a/index.html
+++ b/index.html
@@ -175,28 +175,26 @@
                     <strong>Initial Project Presentation Practice</strong> - Prepared for upcoming presentation by practicing speaking points and designating slides to each team member to present.
                 </div>
             </div>
-<!--
             <div class="meeting-card">
                 <div class="meeting-header">
-                    <div class="meeting-date">November 4, 2025</div>
-                    <div class="meeting-time">3:00 PM - 4:30 PM</div>
+                    <div class="meeting-date">October 16, 2025</div>
+                    <div class="meeting-time">6:30 PM - 8:30 PM</div>
                 </div>
                 <div class="meeting-description">
-                    <strong>Midterm Progress Review</strong> - Presented simulation playback capabilities and preliminary data analysis results. Demonstrated anomaly injection framework prototypes and received feedback on vulnerability testing approaches.
+                    <strong>Software Design Specification Drafting</strong> - Created software design specification document and delegated tasks for stage 2 completion. Outlined the teams requirements and expectations for diagrams.
                 </div>
             </div>
 
             <div class="meeting-card">
                 <div class="meeting-header">
-                    <div class="meeting-date">TBD</div>
-                    <div class="meeting-time">2:00 PM - 3:00 PM</div>
+                    <div class="meeting-date">October 22, 2025</div>
+                    <div class="meeting-time">5:00 PM - 8:00 PM</div>
                 </div>
                 <div class="meeting-description">
-                    <strong>Integration Testing Session</strong> - Tested complete workflow from bag playback through anomaly injection to report generation. Identified integration issues and performance bottlenecks requiring optimization.
-                </div>
+                    <strong>SDS Finalization and Presentation Prep</strong> - Completed software design specification document and created presentation slides for our stage 2 presentation, briefly went over our speaking points for presentation. 
             </div>
         </div>
-    -->
+
     </section>
     <!-- Timeline Section -->
     <section class="timeline-section">
